# image-cooker

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/image_cooker/: __init__.py  __main__.py  cli.py  processor.py
tests/: test_cli.py  test_processor.py
