[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-cooker"
version = "0.1.0"
description = "CLI that prepares web-optimized images: downscales then converts to WebP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "Pillow>=10.0",
    "typer>=0.12",
]

[project.scripts]
image-cooker = "image_cooker.cli:app"

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/image_cooker"]
