[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-cooker"
version = "0.1.0"
description = "CLI that prepares web-optimized images: downscales then converts to WebP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "Pillow>=10.0",
    "typer>=0.12",
]

[project.scripts]
image-cooker = "image_cooker.cli:app"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=7.0",
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/image_cooker"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
pythonVersion = "3.10"
